--- a/src/components/app/App.module.scss
+++ b/src/components/app/App.module.scss
@@ -1,3 +1,44 @@
 .app {
 	min-height: 100vh;
+	overflow-x: hidden;
+
+	.background {
+		position: fixed;
+		left: 0;
+		top: 0;
+		width: 100vw;
+		height: 100vh;
+		background: {
+			position: center;
+			size: cover;
+		};
+	}
+
+	.content {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		z-index: 2;
+
+		.practice_types_list_wrapper {
+			display: flex;
+			flex-direction: column;
+			gap: 20px;
+			margin: 20px;
+
+			@media (min-width: 700px) {
+				flex-direction: row;
+				flex-wrap: wrap;
+				justify-content: space-around;
+			}
+
+			@media (min-width: 1200px) {
+				flex-wrap: nowrap;
+				max-width: 1400px;
+				margin: 20px auto;
+				padding: 0 20px;
+			}
+		}
+	}
 }
